--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,81 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  /* font: inherit; */
+}
+
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+img,
+picture {
+  max-width: 100%;
+}
+
+
 body {
   background-color: #f5f5f5;
   box-sizing: border-box;
+  color: #263238;
   font-family: 'Open Sans', sans-serif;
+  margin: 0 3rem 3rem;
+  line-height: 1.5;
 }
 
-#logo {
+header {
+  display: flex;
+  align-items: center;
+  color: #546E7A;
+  font-size: 0.9rem;
+  padding: 20px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  z-index: 99;
+}
 
+div#logo {
+  flex-basis: 35%;
+  font-size: 1.5rem;
+  font-weight: 900;
+}
+
+img#logo-img {
+  border: none;
+  height: 3rem;
+  width: auto;
+  padding-right: 10px;
+}
+
+nav#navbar-menu {
+  flex-basis: 60%;
 }
 
 ul#navbar-list {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
+
 }
 
 li.nav-item {
-  flex-grow: 1;
   list-style-type: none;
+  padding: 0 10px;
 }
 
 li.nav-item:last-child {
@@ -24,37 +83,224 @@ li.nav-item:last-child {
 }
 
 a.nav-link {
+  color: #546E7A;
   text-decoration: none;
+  transition: 0.4s;
+}
+
+a.nav-link:hover {
+  color: #045ab0;
+  font-size: 1.2rem;
+  font-weight: 900;
+}
+
+form#search {
+
 }
 
 input#nav-search-text {
-  width: 250px;
-  height: 30px;
+  width: 150px;
+  height: 25px;
   border-radius: 15px;
   border: none;
-  padding-left: 20px;
+  padding-left: 1em;
 }
 
 button#nav-search-butn {
-  cursor: pointer;
+  position: absolute;
+  height: 16px;
+  width: 16px;
   border: none;
+  background-image: url(/Users/marinas/Desktop/Web_Development/Udacity-Front-End-Web-Developer/Personal-Blog-Website-Udacity-/images/search-alt-free-icon-font.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
 }
 
-img#nav-search-img {
-  border: none;
-}
 
 
 main#container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1em;
+  gap: 1.5rem;
+  margin-top: 90px;
 }
 
 article.acticle {
   background-color: transparent;
   border: 1px solid #E7EBED;
   border-radius: 5px;
-  line-height: 1.5;
-  padding: 40px;
+  padding: 3rem;
+}
+
+h1 a.article-title-link {
+  color: #11171A;
+  font-size: 3em;
+  font-weight: 900;
+  line-height: 1.05;
+  text-decoration: none;
+}
+
+p.article-category {
+  font-size: 0.6rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+a.article-category-link {
+  text-decoration: none;
+  background-color: rgb(233, 237, 250);
+  color: #546E7A;
+  padding: 0.3rem 1rem;
+  margin-right: 0.4rem;
+}
+
+
+
+
+article.main-article {
+  grid-row: span 2;
+  grid-column: span 2;
+  background-color: transparent;
+  padding: 3rem;
+}
+
+
+
+div.author-photo,
+h4.author-and-date {
+  display: inline;
+  color: #263238;
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+h1.main-article-title {
+  color: #11171A;
+  font-size: 4.8rem;
+  margin: 0.5rem 0;
+}
+
+a.main-article-title-link {
+  color: #11171A;
+  font-size: 4.8rem;
+  font-weight: 900;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+p.main-article-short-text {
+  line-height: 1.7;
+  margin: 2rem 0;
+}
+
+
+section#subscribe-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+form#form-field {
+  flex-basis: 50%;
+  background: #eee;
+  border-radius: 10px;
+  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 47%);
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 4rem;
+  margin: 4rem 0;
+}
+
+p#form-title {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+}
+
+input#name,
+input#email {
+  height: 40px;
+  width: 400px;
+  background-color: #fff;
+  border: 1px solid #CFD8DC;
+  border-radius: 100px;
+  font-size: 0.8rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+fieldset#frequency {
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid #CFD8DC;
+  color: #263238;
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+input#monthly,
+input#weekly,
+input#daily,
+label.frequency-label {
+  margin: 1.2rem 0.15rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+input#monthly,
+input#weekly,
+input#daily,
+label.frequency-label:hover {
+  color: #045ab0;
+}
+
+button#subscribe {
+  width: 60%;
+  background: #2984dfec;
+  border: 1px solid #fff;
+  border-radius: 100px;
+  color: #fff;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  padding: 0.5rem 0;
+  margin: 2.5rem auto 0;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+button#subscribe:hover {
+  background: #0c549d;
+}
+
+p#form-text {
+  flex-basis: 20rem;
+  font-size: 3rem;
+  font-weight: 900;
+  text-align: center;
+}
+
+
+footer {
+  text-align: center;
+}
+
+p#copyright {
+  text-align: center;
+  color: #263238;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+a.social-link {
+  text-decoration: none;
+  margin: 0 0.8rem;
+  cursor: pointer;
+}
+
+img.social-logo {
+  height: 20px;
+  width: 20px;
 }
