--- a/css/style.css
+++ b/css/style.css
@@ -32,89 +32,84 @@ body {
   box-sizing: border-box;
   color: #263238;
   font-family: 'Open Sans', sans-serif;
-  margin: 0 3rem 3rem;
+  margin: 0 3rem 1.5rem;
   line-height: 1.5;
 }
 
 header {
-  display: flex;
-  align-items: center;
-  color: #546E7A;
-  font-size: 0.9rem;
-  padding: 20px 0;
+  width: 94%;
   position: fixed;
   top: 0;
-  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   background-color: #f5f5f5;
+  font-size: 1rem;
+  color: #546E7A;
+  padding: 20px 0;
   z-index: 99;
 }
 
 div#logo {
-  flex-basis: 35%;
-  font-size: 1.5rem;
-  font-weight: 900;
+  font-family: 'Mali', cursive;
+  font-size: 2rem;
 }
 
 img#logo-img {
   border: none;
-  height: 3rem;
+  height: 2rem;
   width: auto;
-  padding-right: 10px;
+  padding-right: 1rem;
 }
 
 nav#navbar-menu {
-  flex-basis: 60%;
+  margin-left: auto;
 }
 
 ul#navbar-list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
-
 }
 
 li.nav-item {
   list-style-type: none;
-  padding: 0 10px;
-}
-
-li.nav-item:last-child {
-  flex-basis: 25%;
+  padding: 0 0.7rem;
 }
 
 a.nav-link {
   color: #546E7A;
   text-decoration: none;
-  transition: 0.4s;
+  transition: 0.5s all ease-in-out;
 }
 
 a.nav-link:hover {
   color: #045ab0;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 900;
 }
 
 form#search {
-
+  margin-left: 1.5rem;
 }
 
 input#nav-search-text {
-  width: 150px;
-  height: 25px;
-  border-radius: 15px;
+  width: 9rem;
+  height: 1.5rem;
   border: none;
+  border-radius: 1rem;
+  font-size: 0.8rem;
   padding-left: 1em;
 }
 
 button#nav-search-butn {
-  position: absolute;
-  height: 16px;
-  width: 16px;
+  position: relative;
+  right: 1.5rem;
+  height: 0.7rem;
+  width: 0.7rem;
+  opacity: 50%;
+  background-color: transparent;
   border: none;
-  background-image: url(/Users/marinas/Desktop/Web_Development/Udacity-Front-End-Web-Developer/Personal-Blog-Website-Udacity-/images/search-alt-free-icon-font.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
   cursor: pointer;
 }
 
@@ -123,27 +118,13 @@ button#nav-search-butn {
 main#container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.5rem;
-  margin-top: 90px;
-}
-
-article.acticle {
-  background-color: transparent;
-  border: 1px solid #E7EBED;
-  border-radius: 5px;
-  padding: 3rem;
-}
-
-h1 a.article-title-link {
-  color: #11171A;
-  font-size: 3em;
-  font-weight: 900;
-  line-height: 1.05;
-  text-decoration: none;
+  grid-template-rows: repeat(6, auto); 
+  gap: 2.5rem;
+  margin-top: 8rem;
 }
 
 p.article-category {
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   font-weight: 700;
   margin-bottom: 1rem;
   cursor: pointer;
@@ -151,23 +132,16 @@ p.article-category {
 
 a.article-category-link {
   text-decoration: none;
-  background-color: rgb(233, 237, 250);
+  background-color: rgba(233, 237, 250, 0.791);
   color: #546E7A;
-  padding: 0.3rem 1rem;
-  margin-right: 0.4rem;
+  padding: 0.4rem 1.4rem;
+  margin-right: 1rem;
+  transition: 0.4s;
 }
 
-
-
-
-article.main-article {
-  grid-row: span 2;
-  grid-column: span 2;
-  background-color: transparent;
-  padding: 3rem;
+a.article-category-link:hover {
+  color: #000;
 }
-
-
 
 div.author-photo,
 h4.author-and-date {
@@ -177,25 +151,105 @@ h4.author-and-date {
   font-weight: 700;
 }
 
+em.author-and-date-small {
+  font-size: 0.65rem;
+  opacity: 65%;
+}
+
+img.author-photo-img {
+  width: 1.2rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  margin-right: 0.4rem;
+}
+
+
+
+article.main-article {
+  grid-row: span 2;
+  grid-column: span 2;
+  background-color: transparent;
+  padding: 5rem;
+}
+
 h1.main-article-title {
-  color: #11171A;
-  font-size: 4.8rem;
-  margin: 0.5rem 0;
+  margin: 2rem 0 1rem;
 }
 
 a.main-article-title-link {
-  color: #11171A;
-  font-size: 4.8rem;
-  font-weight: 900;
+  font-family: 'Raleway', sans-serif;
+  color: #263238e5;
+  font-size: 4rem;
   text-decoration: none;
   cursor: pointer;
   transition: 0.4s;
 }
 
+a.main-article-title-link:hover {
+  color: #045ab0;
+}
+
+
 p.main-article-short-text {
   line-height: 1.7;
-  margin: 2rem 0;
+  margin: 3rem 0;
 }
+
+a.main-article-continue-reading {
+  display: inline;
+  background-color: #fff;
+  border: 1px solid #0066CC;
+  border-radius: 35px;
+  font-size: 0.8rem;
+  color: #263238;
+  text-decoration: none;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button.main-article-continue-reading-btn {
+  border: none;
+  background-color: transparent;
+}
+
+a.main-article-continue-reading:hover {
+  background-image: linear-gradient(to top right, #0066CC, #653EF1);
+  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 60%);
+  color: #fff;
+}
+
+
+article.acticle {
+  background-color: transparent;
+  border: 1px solid #E7EBED;
+  border-radius: 1rem;
+  padding: 3rem;
+  transition: 0.2s all ease-in-out;
+}
+
+article.acticle:hover {
+  transform: scale(1.01);
+  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 10%);
+}
+
+h1.article-title {
+  margin: 2rem 0 1rem;
+}
+
+a.article-title-link {
+  font-family: 'Raleway', sans-serif;
+  color: #263238e5;
+  font-size: 2rem;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+a.article-title-link:hover {
+  color: #045ab0;
+}
+
 
 
 section#subscribe-form {
@@ -205,18 +259,19 @@ section#subscribe-form {
 }
 
 form#form-field {
-  flex-basis: 50%;
+  flex-basis: 35%;
   background: #eee;
-  border-radius: 10px;
+  border-radius: 1rem;
   box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 47%);
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
-  padding: 4rem;
+  padding: 3rem;
   margin: 4rem 0;
 }
 
 p#form-title {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  color: #263238;
   margin-bottom: 2rem;
 }
 
@@ -237,7 +292,7 @@ fieldset#frequency {
   justify-content: space-evenly;
   border: 1px solid #CFD8DC;
   color: #263238;
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin-top: 1rem;
 }
 
@@ -258,29 +313,80 @@ label.frequency-label:hover {
 }
 
 button#subscribe {
-  width: 60%;
-  background: #2984dfec;
-  border: 1px solid #fff;
-  border-radius: 100px;
+  width: 50%;
+  background: #1c6fc2ec;
+  border: none;
+  border-radius: 5rem;
   color: #fff;
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
+  font-size: 1.2rem;
   padding: 0.5rem 0;
   margin: 2.5rem auto 0;
   cursor: pointer;
-  transition: 0.4s;
+  transition: 0.3s all ease-in-out;
 }
 
 button#subscribe:hover {
-  background: #0c549d;
+  background: #022547;
+  border: none;
+  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 60%);
 }
 
 p#form-text {
   flex-basis: 20rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 900;
   text-align: center;
 }
+
+
+section#page-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 3rem 0 1rem;
+}
+
+a.page-number-active {
+  border-bottom: 2px solid #0066cc;
+  color: #0066cc;
+  text-decoration: none;
+}
+
+a.page-number,
+p.page-number {
+  border-bottom: 2px solid transparent;
+  color: #0066cc;
+  text-decoration: none;
+  transition: 0.4s;
+}
+
+a.page-number:hover {
+ font-size: 1.2rem;
+ font-style: bold;
+}
+
+p.page-number {
+  letter-spacing: 0.3rem;
+}
+
+button#next-page {
+  background: none;
+  border: 1px solid #cfd8dcb3;
+  color: #0066cc;
+  font-size: 0.8rem;
+  padding: 0.4rem 1rem;
+  margin-left: 0.5rem;
+  border-radius: 35px;
+  cursor: pointer;
+  transition: 0.4s all ease-in-out;
+}
+
+button#next-page:hover {
+  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 20%);
+}
+
 
 
 footer {
@@ -288,10 +394,9 @@ footer {
 }
 
 p#copyright {
-  text-align: center;
   color: #263238;
   font-size: 0.8rem;
-  margin-bottom: 1rem;
+  margin: 1rem auto;
 }
 
 a.social-link {
@@ -303,4 +408,10 @@ a.social-link {
 img.social-logo {
   height: 20px;
   width: 20px;
+  opacity: 60%;
+  transition: 0.4s all ease-in-out;
+}
+
+img.social-logo:hover {
+  transform: scale(1.5);
 }
