--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header {
   background-color: #f5f5f5;
   font-size: 1rem;
   color: #546E7A;
-  padding: 20px 0;
+  padding: 1rem 0;
   z-index: 99;
 }
 
@@ -206,7 +206,7 @@ header {
   display: inline;
   background-color: #fff;
   border: 1px solid #0066CC;
-  border-radius: 35px;
+  border-radius: 2rem;
   font-size: 0.8rem;
   color: #263238;
   text-decoration: none;
@@ -222,7 +222,7 @@ header {
 
 .main-article-continue-reading:hover {
   background-image: linear-gradient(to top right, #0066CC, #653EF1);
-  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 60%);
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 60%);
   color: #fff;
 }
 
@@ -238,7 +238,7 @@ header {
 
 .acticle:hover {
   transform: scale(1.01);
-  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 10%);
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 10%);
 }
 
 .article-title {
@@ -270,7 +270,7 @@ header {
   flex-basis: 35%;
   background: #eee;
   border-radius: 1rem;
-  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 47%);
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 47%);
   font-size: 1rem;
   text-align: center;
   padding: 3rem;
@@ -285,11 +285,11 @@ header {
 
 #name,
 #email {
-  height: 40px;
-  width: 400px;
+  height: 2.5rem;
+  width: 25rem;
   background-color: #fff;
   border: 1px solid #CFD8DC;
-  border-radius: 100px;
+  border-radius: 6rem;
   font-size: 0.8rem;
   text-align: center;
   margin-bottom: 1rem;
@@ -336,7 +336,7 @@ header {
 #subscribe:hover {
   background: #022547;
   border: none;
-  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 60%);
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 60%);
 }
 
 #form-text {
@@ -386,13 +386,13 @@ p.page-number {
   font-size: 0.8rem;
   padding: 0.4rem 1rem;
   margin-left: 0.5rem;
-  border-radius: 35px;
+  border-radius: 2rem;
   cursor: pointer;
   transition: 0.4s all ease-in-out;
 }
 
 #next-page:hover {
-  box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 20%);
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 20%);
 }
 
 
@@ -414,8 +414,8 @@ footer {
 }
 
 .social-logo {
-  height: 20px;
-  width: 20px;
+  height: 1.25rem;
+  width: 1.25rem;
   opacity: 60%;
   transition: 0.4s all ease-in-out;
 }
