--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,3 +1,4 @@
+/* General rules */
 *,
 *::before,
 *::after {
@@ -5,8 +6,8 @@
 }
 
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   /* font: inherit; */
 }
 
@@ -26,16 +27,17 @@ picture {
   max-width: 100%;
 }
 
-
 body {
   background-color: #f5f5f5;
-  box-sizing: border-box;
-  color: #263238;
   font-family: 'Open Sans', sans-serif;
-  margin: 0 3rem 1.5rem;
+  color: #263238;
   line-height: 1.5;
+  margin: 0 3rem 1.5rem;
+
 }
 
+
+/* Navigation bar */
 header {
   width: 94%;
   position: fixed;
@@ -46,54 +48,54 @@ header {
   background-color: #f5f5f5;
   font-size: 1rem;
   color: #546E7A;
-  padding: 20px 0;
+  padding: 1rem 0;
   z-index: 99;
 }
-
-div#logo {
-  font-family: 'Mali', cursive;
+  
+#logo {
+  font-family: "Mali", cursive;
   font-size: 2rem;
 }
-
-img#logo-img {
-  border: none;
+  
+#logo-img {
   height: 2rem;
   width: auto;
+  border: none;
   padding-right: 1rem;
 }
-
-nav#navbar-menu {
+  
+#navbar-menu {
   margin-left: auto;
 }
-
-ul#navbar-list {
+  
+#navbar-list {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-
-li.nav-item {
+  
+.nav-item {
   list-style-type: none;
   padding: 0 0.7rem;
 }
-
-a.nav-link {
+  
+.nav-link {
   color: #546E7A;
   text-decoration: none;
   transition: 0.5s all ease-in-out;
 }
-
-a.nav-link:hover {
+  
+.nav-link:hover {
   color: #045ab0;
   font-size: 1.4rem;
   font-weight: 900;
 }
-
-form#search {
+  
+#search {
   margin-left: 1.5rem;
 }
-
-input#nav-search-text {
+  
+#nav-search-text {
   width: 9rem;
   height: 1.5rem;
   border: none;
@@ -101,8 +103,8 @@ input#nav-search-text {
   font-size: 0.8rem;
   padding-left: 1em;
 }
-
-button#nav-search-butn {
+  
+#nav-search-butn {
   position: relative;
   right: 1.5rem;
   height: 0.7rem;
@@ -112,15 +114,20 @@ button#nav-search-butn {
   border: none;
   cursor: pointer;
 }
+  
+#navbar-mobile {
+  display: none
+}
+
 
 
 main#container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(6, auto); 
-    gap: 2.5rem;
-    margin-top: 8rem;
-  }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, auto); 
+  gap: 2.5rem;
+  margin-top: 8rem;
+}
 
 
 h1#mail-article-title {
@@ -130,168 +137,119 @@ h1#mail-article-title {
 
 
 
+/* Subscription form */
+#subscribe-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
 
+#form-field {
+  flex-basis: 35%;
+  background: #eee;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 47%);
+  font-size: 1rem;
+  text-align: center;
+  padding: 3rem;
+  margin: 4rem 0;
+}
 
+#form-title {
+  font-size: 1.5rem;
+  color: #263238;
+  margin-bottom: 2rem;
+}
 
-section#subscribe-form {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
+#name,
+#email {
+  height: 2.5rem;
+  width: 25rem;
+  background-color: #fff;
+  border: 1px solid #CFD8DC;
+  border-radius: 6rem;
+  font-size: 0.8rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+#frequency {
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid #CFD8DC;
+  color: #263238;
+  font-size: 0.8rem;
+  margin-top: 1rem;
+}
+
+#monthly,
+#weekly,
+#daily,
+.frequency-label {
+  margin: 1.2rem 0.15rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+#monthly,
+#weekly,
+#daily,
+.frequency-label:hover {
+  color: #045ab0;
+}
+
+#subscribe {
+  width: 50%;
+  background: #1c6fc2ec;
+  border: none;
+  border-radius: 5rem;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+  margin: 2.5rem auto 0;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+
+#subscribe:hover {
+  background: #022547;
+  border: none;
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 60%);
+}
+
+#form-text {
+  flex-basis: 20rem;
+  font-size: 2.5rem;
+  font-weight: 900;
+  text-align: center;
+}
   
-  form#form-field {
-    flex-basis: 35%;
-    background: #eee;
-    border-radius: 1rem;
-    box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 47%);
-    font-size: 1rem;
+
+  
+ /* Footer */
+footer {
     text-align: center;
-    padding: 3rem;
-    margin: 4rem 0;
-  }
+}
   
-  p#form-title {
-    font-size: 1.5rem;
-    color: #263238;
-    margin-bottom: 2rem;
-  }
+#copyright {
+  color: #263238;
+  font-size: 0.8rem;
+  margin: 1rem auto;
+}
   
-  input#name,
-  input#email {
-    height: 40px;
-    width: 400px;
-    background-color: #fff;
-    border: 1px solid #CFD8DC;
-    border-radius: 100px;
-    font-size: 0.8rem;
-    text-align: center;
-    margin-bottom: 1rem;
-  }
+.social-link {
+  text-decoration: none;
+  margin: 0 0.8rem;
+  cursor: pointer;
+}
   
-  fieldset#frequency {
-    display: flex;
-    justify-content: space-evenly;
-    border: 1px solid #CFD8DC;
-    color: #263238;
-    font-size: 0.8rem;
-    margin-top: 1rem;
-  }
+.social-logo {
+  height: 1.25rem;
+  width: 1.25rem;
+  opacity: 60%;
+  transition: 0.4s all ease-in-out;
+}
   
-  input#monthly,
-  input#weekly,
-  input#daily,
-  label.frequency-label {
-    margin: 1.2rem 0.15rem;
-    cursor: pointer;
-    transition: 0.4s;
-  }
-  
-  input#monthly,
-  input#weekly,
-  input#daily,
-  label.frequency-label:hover {
-    color: #045ab0;
-  }
-  
-  button#subscribe {
-    width: 50%;
-    background: #1c6fc2ec;
-    border: none;
-    border-radius: 5rem;
-    color: #fff;
-    font-size: 1.2rem;
-    padding: 0.5rem 0;
-    margin: 2.5rem auto 0;
-    cursor: pointer;
-    transition: 0.3s all ease-in-out;
-  }
-  
-  button#subscribe:hover {
-    background: #022547;
-    border: none;
-    box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 60%);
-  }
-  
-  p#form-text {
-    flex-basis: 20rem;
-    font-size: 2.5rem;
-    font-weight: 900;
-    text-align: center;
-  }
-  
-  
-  section#page-navigation {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-    margin: 3rem 0 1rem;
-  }
-  
-  a.page-number-active {
-    border-bottom: 2px solid #0066cc;
-    color: #0066cc;
-    text-decoration: none;
-  }
-  
-  a.page-number,
-  p.page-number {
-    border-bottom: 2px solid transparent;
-    color: #0066cc;
-    text-decoration: none;
-    transition: 0.4s;
-  }
-  
-  a.page-number:hover {
-   font-size: 1.2rem;
-   font-style: bold;
-  }
-  
-  p.page-number {
-    letter-spacing: 0.3rem;
-  }
-  
-  button#next-page {
-    background: none;
-    border: 1px solid #cfd8dcb3;
-    color: #0066cc;
-    font-size: 0.8rem;
-    padding: 0.4rem 1rem;
-    margin-left: 0.5rem;
-    border-radius: 35px;
-    cursor: pointer;
-    transition: 0.4s all ease-in-out;
-  }
-  
-  button#next-page:hover {
-    box-shadow: 0px 0px 11px 0px rgb(50 50 50 / 20%);
-  }
-  
-  
-  footer {
-    text-align: center;
-  }
-  
-  p#copyright {
-    color: #263238;
-    font-size: 0.8rem;
-    margin: 1rem auto;
-  }
-  
-  a.social-link {
-    text-decoration: none;
-    margin: 0 0.8rem;
-    cursor: pointer;
-  }
-  
-  img.social-logo {
-    height: 20px;
-    width: 20px;
-    opacity: 60%;
-    transition: 0.4s all ease-in-out;
-  }
-  
-  img.social-logo:hover {
-    transform: scale(1.5);
-  }
+.social-logo:hover {
+  transform: scale(1.5);
+}
