--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,68 @@
-/* General rules */
+/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
+/* Remove default margin */
 * {
   padding: 0;
   margin: 0;
   /* font: inherit; */
 }
 
+/* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
 }
 
-input,
-button,
-textarea,
-select {
-  font: inherit;
+html,
+body {
+  height: 100%;
 }
 
+/* Make images easier to work with */
 img,
-picture {
+picture,
+svg {
   max-width: 100%;
 }
 
+/* Set core body defaults */
 body {
   background-color: #f5f5f5;
   font-family: "Open Sans", sans-serif;
   color: #263238;
   line-height: 1.5;
-  margin: 0 3rem 1.5rem;
+  text-rendering: optimizeSpeed;
 }
 
 
 /* Navigation bar */
 header {
-  width: 94%;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+
   position: fixed;
   top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   background-color: #f5f5f5;
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #546E7A;
-  padding: 1rem 0;
+  padding: 1rem 0 2rem;
   z-index: 99;
 }
 
 #logo {
+  position: relative;
+  left: 5%;
   font-family: "Mali", cursive;
   font-size: 1.5rem;
 }
@@ -71,7 +82,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 1.1rem;
+  gap: 0.9rem;
 }
 
 .nav-item {
@@ -163,12 +174,12 @@ header {
     align-items: center;
     position: absolute;
     top: 80%;
-    left: 65%;
-    transform: translateX(-15%);
+    left: 70%;
+    /* transform: translateX(0); */
     border: 1px solid rgba(0, 0, 0, 0.061);
     border-radius: 1rem;
     box-shadow: 0 0 1rem 0 rgb(50 50 50 / 30%);
-    padding: 1.8rem 0;
+    padding: 2rem 1rem;
 	}
 
   .navbar-mobile-btn {
@@ -198,6 +209,9 @@ header {
 		opacity: 0;
 	}
 
+  #nav-search-text {
+    width: 90%;
+  }
 }
 
 
@@ -208,7 +222,8 @@ header {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(6, auto); 
   gap: 2.5rem;
-  margin-top: 8rem;
+  max-width: 1200px;
+  margin: 7rem auto 0;
 }
 
 .article-category {
@@ -310,6 +325,8 @@ header {
 
 /* Article (short form) */
 .acticle {
+  display: flex;
+  flex-direction: column;
   background-color: transparent;
   border: 1px solid #E7EBED;
   border-radius: 1rem;
