--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header {
 
 #logo {
   position: relative;
-  left: 5%;
+  left: 4%;
   font-family: "Mali", cursive;
   font-size: 1.5rem;
 }
@@ -102,7 +102,7 @@ header {
 }
 
 #search {
-  margin-left: 0.8rem;
+  padding-left: 1rem;
 }
 
 #nav-search-text {
@@ -110,27 +110,23 @@ header {
   height: 1.5rem;
   border: none;
   border-radius: 1rem;
-  font-size: 0.8rem;
-  padding-left: 1rem;
+  font-size: 0.7rem;
+  opacity: 40%;
+  padding-left: 0.5rem;
 }
 
-#nav-search-btn {
-  position: relative;
-  right: 1.5rem;
-  height: 0.7rem;
-  width: 0.7rem;
-  opacity: 50%;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+#nav-search-text:hover {
+  color: #546E7A;
+  opacity: 100%;
+  border: 1px solid #0066CC;
 }
 
 
+/* Add checkbox for Navbar button for responsove desigh */
 #checkbox-toggle {
 	position: absolute;
 	top: -100px;
 }
-
 
 #navbar-mobile {
   display: none
@@ -175,11 +171,12 @@ header {
     position: absolute;
     top: 80%;
     left: 70%;
+    right: 4%;
     /* transform: translateX(0); */
     border: 1px solid rgba(0, 0, 0, 0.061);
     border-radius: 1rem;
     box-shadow: 0 0 1rem 0 rgb(50 50 50 / 30%);
-    padding: 2rem 1rem;
+    padding: 2rem 0.1rem;
 	}
 
   .navbar-mobile-btn {
@@ -187,7 +184,7 @@ header {
     align-items: center;
     gap: 0.5rem;
     position: absolute;
-    right: 5%;
+    right: 4%;
     top: 50%;
     transform: translateY(-50%);
     font-size: 0.8rem;
