--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header {
   .navbar-list {
     display: none;
 		position: absolute;
-		z-index: 9;
+		z-index: 99;
 		left: 0;
 		right: 0;
     background-color: #f5f5f5;
@@ -166,7 +166,7 @@ header {
   nav :checked ~ .navbar-list {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.8rem;
     align-items: center;
     position: absolute;
     top: 80%;
@@ -176,7 +176,7 @@ header {
     border: 1px solid rgba(0, 0, 0, 0.061);
     border-radius: 1rem;
     box-shadow: 0 0 1rem 0 rgb(50 50 50 / 30%);
-    padding: 2rem 0.1rem;
+    padding: 1.5rem 0rem;
 	}
 
   .navbar-mobile-btn {
@@ -261,6 +261,8 @@ header {
   aspect-ratio: 1;
   border-radius: 50%;
   margin-right: 0.4rem;
+  position: relative;
+  top: 0.2rem;
 }
 
 
