--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ header {
   background-color: #f5f5f5;
   font-size: 0.9rem;
   color: #546E7A;
-  padding: 1rem 0 2rem;
+  padding: 1rem 0.5rem 2rem;
   z-index: 99;
 }
 
@@ -152,7 +152,7 @@ header {
   box-shadow: 0 0 1rem 0 rgb(50 50 50 / 20%);
 }
 
-@media screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) {
   .navbar-list {
     display: none;
 		position: absolute;
@@ -216,9 +216,9 @@ header {
 /* Articles (shorts and main) */
 #container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(6, auto); 
-  gap: 2.5rem;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(6, auto);
+  gap: 2rem;
   max-width: 1200px;
   margin: 7rem auto 0;
 }
@@ -228,13 +228,17 @@ header {
   font-weight: 700;
   margin-bottom: 1rem;
   cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
 .article-category-link {
   text-decoration: none;
   background-color: rgba(233, 237, 250, 0.791);
   color: #546E7A;
-  padding: 0.4rem 1.4rem;
+  padding: 0.2rem 0.7rem;
+  border-radius: 0.3rem;
   margin-right: 1rem;
   transition: 0.4s;
 }
@@ -271,7 +275,7 @@ header {
   grid-row: span 2;
   grid-column: span 2;
   background-color: transparent;
-  padding: 5rem;
+  padding: 4rem;
 }
 
 .main-article-title {
@@ -330,6 +334,7 @@ header {
   border: 1px solid #E7EBED;
   border-radius: 1rem;
   padding: 3rem;
+  margin-inline: 0.3rem;
   transition: 0.2s all ease-in-out;
 }
 
@@ -353,6 +358,88 @@ header {
 
 .article-title-link:hover {
   color: #045ab0;
+}
+
+
+/* Responsive design for articles */
+@media only screen and (max-width: 900px) {
+  #container {
+    grid-template-columns: repeat(2, auto);
+    gap: 0.2rem;
+    margin-top: 2.5rem;
+  }
+
+  .main-article {
+    margin: 0.6rem;
+    padding: 2.5rem;
+  }
+
+  .acticle {
+    padding: 1.2rem;
+    margin-inline: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main-article-title-link {
+    font-size: 3.2rem;
+  }
+
+  .main-article-short-text {
+    font-size: 0.8rem;
+  }
+
+  .article-title-link {
+    font-size: 1.5rem;
+  }
+}
+
+/* Page-Navigation */
+#page-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 1.5rem;
+}
+
+.page-number-active {
+  border-bottom: 2px solid #0066cc;
+  color: #0066cc;
+  text-decoration: none;
+}
+
+.page-number {
+  border-bottom: 2px solid transparent;
+  color: #0066cc;
+  text-decoration: none;
+  transition: 0.4s;
+}
+
+.page-number:hover {
+ font-size: 1.2rem;
+ font-style: bold;
+}
+
+p.page-number {
+  letter-spacing: 0.3rem;
+}
+
+#next-page {
+  background: none;
+  border: 1px solid #cfd8dcb3;
+  color: #0066cc;
+  font-size: 0.8rem;
+  padding: 0.4rem 1rem;
+  margin-left: 0.5rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  transition: 0.4s all ease-in-out;
+}
+
+#next-page:hover {
+  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 20%);
 }
 
 
@@ -437,65 +524,46 @@ header {
 }
 
 #form-text {
-  flex-basis: 20rem;
+  flex-basis: 25%;
   font-size: 2.5rem;
   font-weight: 900;
   text-align: center;
 }
 
 
-/* Page-Navigation */
-#page-navigation {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  margin: 3rem 0 1rem;
+/* Responsive design for subscription form */
+@media only screen and (max-width: 900px) {
+  #subscribe-form {
+    flex-direction: column-reverse;
+    margin-top: 2.5rem;
+  }
+
+  #form-text {
+    font-size: 1.5rem;
+  }
+
+  #form-field {
+    margin: 1rem auto;
+    scale: 0.85;
+  }
 }
 
-.page-number-active {
-  border-bottom: 2px solid #0066cc;
-  color: #0066cc;
-  text-decoration: none;
-}
+@media only screen and (max-width: 600px) {
+  #form-text {
+    margin-bottom: -1rem;
+  }
 
-.page-number {
-  border-bottom: 2px solid transparent;
-  color: #0066cc;
-  text-decoration: none;
-  transition: 0.4s;
-}
-
-.page-number:hover {
- font-size: 1.2rem;
- font-style: bold;
-}
-
-p.page-number {
-  letter-spacing: 0.3rem;
-}
-
-#next-page {
-  background: none;
-  border: 1px solid #cfd8dcb3;
-  color: #0066cc;
-  font-size: 0.8rem;
-  padding: 0.4rem 1rem;
-  margin-left: 0.5rem;
-  border-radius: 2rem;
-  cursor: pointer;
-  transition: 0.4s all ease-in-out;
-}
-
-#next-page:hover {
-  box-shadow: 0 0 1rem 0 rgb(50 50 50 / 20%);
+  #form-field {
+    margin: 0 0 -2rem;
+    scale: 0.7;
+  }
 }
 
 
 /* Footer */
 footer {
   text-align: center;
+  padding-bottom: 1.5rem;
 }
 
 #copyright {
@@ -506,7 +574,7 @@ footer {
 
 .social-link {
   text-decoration: none;
-  margin: 0 0.8rem;
+  margin-inline: 0.8rem;
   cursor: pointer;
 }
 
