--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   background-color: #f5f5f5;
   font-family: "Open Sans", sans-serif;
   color: #263238;
-  line-height: 1.5;
+  line-height: 1.3;
   text-rendering: optimizeSpeed;
 }
 
@@ -115,8 +115,10 @@ header {
   padding-left: 0.5rem;
 }
 
-#nav-search-text:hover {
+#nav-search-text:hover,
+#nav-search-text:focus {
   color: #546E7A;
+  font-size: 0.8rem;
   opacity: 100%;
   border: 1px solid #0066CC;
 }
@@ -407,39 +409,47 @@ header {
 .page-number-active {
   border-bottom: 2px solid #0066cc;
   color: #0066cc;
+  font-size: 0.8rem;
   text-decoration: none;
+  transition: 0.4s;
 }
 
 .page-number {
   border-bottom: 2px solid transparent;
   color: #0066cc;
   text-decoration: none;
+  font-size: 0.8rem;
   transition: 0.4s;
 }
 
-.page-number:hover {
- font-size: 1.2rem;
+.page-number:hover,
+.page-number-active:hover {
+ font-size: 1rem;
  font-style: bold;
 }
 
 p.page-number {
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.1rem;
 }
 
-#next-page {
+.change-page {
   background: none;
   border: 1px solid #cfd8dcb3;
-  color: #0066cc;
-  font-size: 0.8rem;
-  padding: 0.4rem 1rem;
-  margin-left: 0.5rem;
+  padding: 0.4rem 0.8rem;
+  margin-inline: 0.4rem;
   border-radius: 2rem;
   cursor: pointer;
   transition: 0.4s all ease-in-out;
 }
 
-#next-page:hover {
+.change-page:hover {
   box-shadow: 0 0 1rem 0 rgb(50 50 50 / 20%);
+}
+
+.change-page-link {
+  text-decoration: none;
+  color: #0066cc;
+  font-size: 0.7rem;
 }
 
 
