--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -34,7 +34,7 @@ body {
   background-color: #f5f5f5;
   font-family: "Open Sans", sans-serif;
   color: #263238;
-  line-height: 1.3;
+  line-height: 1.5;
   text-rendering: optimizeSpeed;
 }
 
@@ -220,21 +220,12 @@ header {
   margin: 7rem auto 0;
 }
 
-.main-text {
-  display: grid;
-  grid-template-columns: 70% 30%;
-  gap: 2rem;
-  max-width: 1200px;
-  margin: 7rem auto 0;
-}
-
 .article-title {
   font-family: "Raleway", sans-serif;
   color: #141a1de5;
   font-size: 5rem;
   text-align: center;
 }
-
 
 .author-photo-name-date {
   text-align: center;
@@ -269,12 +260,144 @@ header {
   opacity: 70%;
 }
 
+.main-text {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  gap: 3.5rem;
+  max-width: 1200px;
+  padding: 1.5rem;
+  margin: 3rem 0.6rem 0;
+}
 
 
+/* Short text, Category and Archives */
+.short-text-category-archive {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  font-size: 0.8rem;
+}
+
+.short-text-box {
+  background-color: #eee;
+  line-height: 1.7;
+  border-radius: 5%;
+  padding: 0.8rem;
+}
+
+.short-text-title {
+  font-style: italic;
+  padding: 0 0.8rem 0.5rem;
+}
+
+.article-category {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.article-category-link {
+  text-decoration: none;
+  background-color: rgba(233, 237, 250, 0.791);
+  color: #546E7A;
+  padding: 0.2rem 0.7rem;
+  border-radius: 15%;
+  margin-right: 0.5rem;
+  transition: 0.4s;
+}
+
+.article-category-link:hover {
+  color: #000;
+}
+
+.archive-month {
+  font-size: 0.8rem;
+  list-style-type: none;
+  line-height: 2;
+  padding: 0 0.8rem;
+}
+
+.archive-month-link {
+  color: #546E7A;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.archive-month-link:hover {
+  color: #045ab0;
+}
+
+.archives-mobile{
+  display: none;
+}
+
+/* Responsive design for articles */
+@media only screen and (max-width: 900px) {
+  .article-title {
+    font-size: 3.5rem;
+    margin-top: -1rem;
+  }
+
+  .author-photo-name-date {
+    scale: 0.7;
+    margin-top: -0.2rem;
+    margin-bottom: -2rem;
+  }
+
+  .main-text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .short-text-category-archive {
+    order: 1;
+  }
+
+  .text {
+    order: 2;
+  }
+
+  .archives {
+    display: none;
+  }
+}
 
 
+/* Archives for mobiles */
+@media only screen and (max-width: 900px) {
+  .archives-mobile{
+    display: block;
+    user-select: none;
+    color: #546E7A;
+    padding-inline: 2rem;
+    margin-top: 1rem;
+    cursor: pointer;
+  }
 
-/* Page-Navigation */
+  .archives-mobile-title {
+    margin-bottom: 0.5rem;
+  }
+
+  .monthly-archives-mobile {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.2rem;
+  }
+
+  .archive-month {
+    padding: 0 0 0 0.3rem;
+    line-height: 1.5;
+  }
+
+  .archive-month-link {
+    font-size: 0.6rem;
+  }
+}
+
+
+/* Page navigation */
 #page-navigation {
   display: flex;
   flex-wrap: wrap;
@@ -282,32 +405,6 @@ header {
   justify-content: center;
   gap: 0.5rem;
   margin-top: 1.5rem;
-}
-
-.page-number-active {
-  border-bottom: 2px solid #0066cc;
-  color: #0066cc;
-  font-size: 0.8rem;
-  text-decoration: none;
-  transition: 0.4s;
-}
-
-.page-number {
-  border-bottom: 2px solid transparent;
-  color: #0066cc;
-  text-decoration: none;
-  font-size: 0.8rem;
-  transition: 0.4s;
-}
-
-.page-number:hover,
-.page-number-active:hover {
- font-size: 1rem;
- font-style: bold;
-}
-
-p.page-number {
-  letter-spacing: 0.1rem;
 }
 
 .change-page {
