--- a/css/style.css
+++ b/css/style.css
@@ -225,13 +225,13 @@ header {
 }
 
 .article-category {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   font-size: 0.7rem;
   font-weight: 700;
   margin-bottom: 1rem;
   cursor: pointer;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
 }
 
 .article-category-link {
@@ -239,7 +239,7 @@ header {
   background-color: rgba(233, 237, 250, 0.791);
   color: #546E7A;
   padding: 0.2rem 0.7rem;
-  border-radius: 0.3rem;
+  border-radius: 15%;
   margin-right: 1rem;
   transition: 0.4s;
 }
@@ -295,7 +295,6 @@ header {
 .main-article-title-link:hover {
   color: #045ab0;
 }
-
 
 .main-article-short-text {
   line-height: 1.7;
@@ -419,6 +418,7 @@ header {
   color: #0066cc;
   text-decoration: none;
   font-size: 0.8rem;
+  letter-spacing: 0.1rem;
   transition: 0.4s;
 }
 
@@ -426,10 +426,6 @@ header {
 .page-number-active:hover {
  font-size: 1rem;
  font-style: bold;
-}
-
-p.page-number {
-  letter-spacing: 0.1rem;
 }
 
 .change-page {
