--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -269,6 +269,15 @@ header {
   margin: 3rem 0.6rem 0;
 }
 
+.codepen {
+  height: 265px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid;
+  margin: 1em 0;
+  padding: 1em;
+}
 
 /* Short text, Category and Archives */
 .short-text-category-archive {
